--- a/source/stylesheets/responsive/_application.sass
+++ b/source/stylesheets/responsive/_application.sass
@@ -5,6 +5,7 @@
       left: 0
       right: 0
     float: none
+    margin-bottom: 20px
 
   %block-list-item
     +span-columns(4)
@@ -22,6 +23,9 @@
 
   %block-margin-bottom
     margin-bottom: 30px
+
+  img
+    width: 100%
 
   .post
     > header h3
@@ -123,7 +127,7 @@
     @extend %block-margin-bottom
 
     h2
-      font-size: rem(32)
+      font-size: rem(27)
 
     figure,
     .figure,
@@ -137,20 +141,38 @@
   .notice
     @extend %block-margin-bottom
 
+    h3
+      font-size: rem(27)
+
     .highlight
+      .caption,
+      figcaption
+        position: inherit
+
       &.atualiza-enem
         margin-top: 30px
 
       .atualiza-enem
+        background: palette(sections, atualiza-enem)
+        filter: none
         height: 100%
-        padding-top: 124px
+        padding-top: 0
+        overflow: hidden
+        text-align: center
 
         h3
           width: 100%
+          font-size: rem(27)
+          margin:
+            top: 10px
+            bottom: 20px
+
+        p
+          margin-bottom: 30px
 
         .button--download
-          float: left
-          margin-top: 10px
+          float: none
+          +default-button(black)
 
     &.triple
       figure,
@@ -314,3 +336,9 @@
             left: auto
             right: auto
           +size(25px 25px)
+
+  .highlight
+    @each $item in $sections
+      figcaption,
+      .caption
+        background-color: palette(sections, $item)
